# openai-streaming

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pydoc-markdown.yml  pyproject.toml  requirements.txt
.github/workflows/: pr-triage.yaml  publish.yaml  test.yaml
docs/: reference.md
openai_streaming/: __init__.py  decorator.py  fn_dispatcher.py  openai_function.py  stream_processing.py  utils.py
openai_streaming/struct/: __init__.py  handler.py  yaml_parser.py
tests/: example.py  example_struct.py  mock_response.json  mock_response_multitool.json  mock_response_struct.json  mock_response_tools.json  struct_example.py  test.py  test_with_functions.py  test_with_struct.py
